--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,19 @@
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sass": "^2.3.3",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-source-strapi": "^0.0.12",
     "gatsby-transformer-sharp": "^2.5.3",
     "moment": "^2.26.0",
+    "node-sass": "4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-markdown": "^4.3.1",
-    "react-moment": "^0.9.7"
+    "react-moment": "^0.9.7",
+    "sass": "1.26.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
