--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "version": "0.0.1",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
-    "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-sass": "^2.3.3",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-styled-components": "^3.3.3",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-source-strapi": "^0.0.12",
     "gatsby-transformer-sharp": "^2.5.3",
@@ -21,7 +24,8 @@
     "react-helmet": "^6.0.0",
     "react-markdown": "^4.3.1",
     "react-moment": "^0.9.7",
-    "sass": "1.26.3"
+    "sass": "1.26.3",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
